# websocket-in-c

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/: conection.h
client/src/: conection.c  main.c
include/: websocket.h
server/: CMakeLists.txt  README.md
server/include/: websocket.h
server/src/: main.c  websocket.c
src/: main.c  websocket.c  websocket.h
